--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "dayvudev/yaht",
     "description": "Utility for writing web pages in 'YAML' and converting them to 'HTML'.",
-    "version": "v1.0.0-dev",
+    "version": "v1.0.0",
     "type": "library",
     "keywords": ["yaml", "html", "lifebalance"],
     "homepage": "https://github.com/dayvudev",
@@ -13,7 +13,8 @@
         "role": "Software Developer"
     }],
     "require": {
-        "ext-yaml": "*"
+        "php": "~8.0",
+        "ext-yaml": "~2.2"
     },
     "autoload": {
         "files": [
