--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "autoload": {
         "files": [
+            "bin/init_set.php",
             "bin/define.php"
         ],
         "psr-4": {
